syntax = "proto3";

package fusionchain.treasury;

import "fusionchain/treasury/key.proto";
import "fusionchain/treasury/wallet.proto";
import "fusionchain/treasury/mpcsign.proto";

option go_package = "gitlab.qredo.com/qrdochain/fusionchain/x/treasury/types";

// Msg defines the Msg service.
service Msg {
  // Request a new key to the MPC network, the key will belong to the
  // specified workspace.
  rpc NewKeyRequest(MsgNewKeyRequest) returns (MsgNewKeyRequestResponse);

  // Update an existing request by writing a result into it. This message is
  // called by MPC network nodes.
  rpc UpdateKeyRequest(MsgUpdateKeyRequest)
      returns (MsgUpdateKeyRequestResponse);

  // Request a new signature
  rpc NewSignatureRequest(MsgNewSignatureRequest)
      returns (MsgNewSignatureRequestResponse);

  // Fulfill a signature request
  rpc FulfillSignatureRequest(MsgFulfillSignatureRequest)
      returns (MsgFulfillSignatureRequestResponse);

  // Request a new wallet
  rpc NewWalletRequest(MsgNewWalletRequest)
      returns (MsgNewWalletRequestResponse);
}

message MsgNewKeyRequest {
  string creator = 1;
  uint64 workspace_id = 2;
  uint64 keyring_id = 3;
  KeyType key_type = 4;
}

message MsgNewKeyRequestResponse { uint64 id = 1; }

message MsgNewKey { bytes public_key = 1; }

message MsgUpdateKeyRequest {
  string creator = 1;
  uint64 request_id = 2;
  KeyRequestStatus status = 3;

  // Holds the result of the request. If status is approved, the result will
  // contain the requested key's public key that can be used for signing
  // payloads.
  // If status is rejected, the result will contain the reason.
  oneof result {
    MsgNewKey key = 4;
    string reject_reason = 5;
  }
}

message MsgUpdateKeyRequestResponse {}

message MsgNewSignatureRequest {
  string creator = 1;
  uint64 key_id = 2;
  bytes data_for_signing = 3;
}

message MsgNewSignatureRequestResponse { uint64 id = 1; }

message MsgSignedData { bytes signed_data = 1; }

message MsgFulfillSignatureRequest {
  string creator = 1;
  uint64 request_id = 2;
  SignRequestStatus status = 3;

  // Holds the result of the request. If status is approved, the result will
  // contain the signed data that was requested
  // If status is rejected, the result will contain the reason.
  oneof result {
    MsgSignedData payload = 4;
    string reject_reason = 5;
  }
}

message MsgFulfillSignatureRequestResponse {}

message MsgNewWalletRequest {
  string creator = 1;
  WalletType wallet_type = 2;
  uint64 key_id = 3;
}

message MsgNewWalletRequestResponse {}
